gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels:
    company: itssolutions
    activity: cicd-01
    supply-chain: enforced   # active la ValidatingAdmissionPolicy
